# demo-mlg-traffic-twin

./: .gitattributes  .gitignore  NOTES.txt  README.md  pyproject.toml
backend/: brussels.geojson  calculate_metrics.py  extract_osm.py  fcd_to_trips.py  generate_congestion_map.py  generate_filter_polygon.py  get_osiris_closed_edges.py  main.py  net2geojson.py  pyproject.toml  rerouters_fix.py
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: configs.json
frontend/public/cars/: car1.glb  car2.glb  car3.glb  car4.glb  car5.glb  car6.glb  car7.glb
frontend/public/networks/brussels_full/: network.net.xml  network_lanes.json
frontend/public/networks/brussels_main_roads/: network.geojson  network.net.xml  network_lanes.json
frontend/public/networks/tulipe/: network.geojson  network_lanes.json
frontend/public/routes/: routes.9.xml
frontend/public/simulations/simulation1/: congestion_with.geojson  congestion_without.geojson  fcd_trips_with.json  fcd_trips_without.json  metrics.json  network.net.xml
frontend/public/simulations/simulation2/: congestion_with.geojson  congestion_without.geojson  fcd_trips_with.json  fcd_trips_without.json  metrics.json
frontend/public/simulations/simulation3/: fcd_trips_with.json  fcd_trips_without.json
frontend/src/: App.vue  create_fcd_filter.js  main.js  store.js  utils.js
frontend/src/components/: MetricsDashboard.vue  TrafficMap.vue  UnifiedVisualization.vue
frontend/src/views/: GenerateSimulation.vue  ResultView.vue
